# Simulation

./: .gitignore  Cargo.toml  README.md  index.html
src/: main.rs
src/actions/: board_plugin.rs  cells_plugin.rs  mod.rs  seeds_plugin.rs
src/cameras/: main_camera.rs  mod.rs
src/core/: network.rs
src/entities/: cells.rs  mod.rs  seed.rs  world_board.rs
src/ui/: debug.rs  info_board.rs  mod.rs
src/utils/: mod.rs  ring_buffer.rs
wasm/: simulation.d.ts  simulation.js  simulation_bg.wasm.d.ts
