[package]
name = "simulation"
version = "0.0.2"
edition = "2021"
rust-version = "1.71.1"

 
[dependencies]
bevy = "0.11.2"
rand = "0.8.5"
bevy-inspector-egui = "0.19.0"
bevy_pancam = "0.9.0"

[profile.dev.package."*"]       
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"
# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"
# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"
# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
